--- a/package.json
+++ b/package.json
@@ -43,6 +43,5 @@
   "devDependencies": {
     "sass": "^1.55.0"
   },
-  "homepage": "https://myusername.github.io/my-app"
-
+  "homepage": "https://Puzynia25.github.io/marvel"
 }
