--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
   "devDependencies": {
     "sass": "^1.55.0"
   },
-  "homepage": "https://Puzynia25.github.io/marvel"
+  "homepage": "https://Puzynia25.github.io/"
 }
